add bedside pool and make HashMap out of pool name/items/amounts